[workspace]
members = [
  "digital_asset_types",
  "metadata_json",
  "metaplex-rpc-proxy",
  "nft_ingester",
  "tree_backfiller",
  "tools/acc_forwarder",
  "tools/bgtask_creator",
  "tools/fetch_trees",
  "tools/load_generation",
  "tools/tree-status",
  "tools/txn_forwarder",
]
exclude = [
  "das_api",
  "migration",
  "metaplex_program_library",
  "solana_program_library",
]

[profile.release]
lto = true
codegen-units = 1
