[workspace]
members = [
  "blockbuster",
  "core",
  "das_api",
  "digital_asset_types",
  "integration_tests",
  "metadata_json",
  "metaplex-rpc-proxy",
  "migration",
  "nft_ingester",
  "ops",
  "grpc-ingest",
  "program_transformers",
  "tools/acc_forwarder",
  "tools/bgtask_creator",
  "tools/fetch_trees",
  "tools/load_generation",
  "tools/tree-status",
  "tools/txn_forwarder",
]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
repository = "https://github.com/metaplex-foundation/digital-asset-rpc-infrastructure"
version = "0.7.2"

[workspace.dependencies]

backon = "0.4.1"
heck = "0.5.0"
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anyhow = "1.0.75"
async-std = "1.0.0"
async-stream = "0.3.5"
async-trait = "0.1.60"
atty = "0.2.14"
blockbuster = { path = "blockbuster" }
borsh = "~0.10.3"
borsh-derive = "~0.10.3"
bs58 = "0.4.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
cadence = "0.29.0"
cadence-macros = "0.29.0"
cargo-lock = "9.0.0"
chrono = "0.4.19"
clap = "4.2.2"
das_api = { path = "das_api" }
das-core = { path = "core" }
digital_asset_types = { path = "digital_asset_types" }
das-metadata-json = { path = "metadata_json" }
enum-iterator = "1.2.0"
enum-iterator-derive = "1.1.0"
env_logger = "0.10.0"
fake = "2.5.0"
figment = "0.10.8"
flatbuffers = "23.1.21"
function_name = "0.3.0"
futures = "0.3.28"
hex = "0.4.3"
hyper = "0.14.23"
indexmap = "1.9.3"
indicatif = "0.17.5"
insta = "1.34.0"
itertools = "0.10.1"
git-version = "0.3.5"
json5 = "0.4.1"
jsonpath_lib = "0.3.0"
jsonrpsee = "0.16.2"
jsonrpsee-core = "0.16.2"
lazy_static = "1.4.0"
log = "0.4.17"
metrics = "0.20.1"
migration = { path = "migration" }
mime_guess = "2.0.4"
mpl-bubblegum = "1.2.0"
mpl-core = { version = "0.7.0", features = ["serde"] }
mpl-token-metadata = "4.1.1"
nft_ingester = { path = "nft_ingester" }
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.19.0"
open-rpc-derive = "0.0.4"
open-rpc-schema = "0.0.4"
opentelemetry = "0.21.0"
opentelemetry-jaeger = "0.20.0"
opentelemetry_sdk = "0.21.1"
plerkle_messenger = "1.6.0"
plerkle_serialization = "1.8.0"
program_transformers = { path = "program_transformers" }
prometheus = "0.13.3"
proxy-wasm = "0.2.0"
rand = "0.8.5"
redis = "0.25.3"
regex = "1.6.0"
reqwest = "0.11.13"
rust-crypto = "0.2.36"
schemars = "0.8.6"
schemars_derive = "0.8.6"
sea-orm = "0.10.6"
sea-orm-migration = "0.10.6"
sea-query = "0.28.1"
serde = "1.0.137"
serde_json = "1.0.81"
serde_yaml = "0.9.34"
serial_test = "2.0.0"
solana-account-decoder = "~1.17"
solana-client = "~1.17"
solana-geyser-plugin-interface = "~1.17"
solana-program = "~1.17"
solana-sdk = "~1.17"
solana-transaction-status = "~1.17"
solana-zk-token-sdk = "1.17.16"
spl-account-compression = "0.3.0"
spl-associated-token-account = ">= 1.1.3, < 3.0"
spl-concurrent-merkle-tree = "0.2.0"
spl-noop = "0.2.0"
spl-pod = { version = "0.1.0", features = ["serde-traits"] }
spl-token = ">= 3.5.0, < 5.0"
spl-token-2022 = { version = "1.0", features = ["no-entrypoint"] }
spl-token-group-interface = "0.1.0"
spl-token-metadata-interface = "0.2.0"
sqlx = "0.6.2"
thiserror = "1.0.31"
tokio = "1.30.0"
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-http = "0.3.5"
tracing = "0.1.35"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = "0.3.16"
txn_forwarder = { path = "tools/txn_forwarder" }
url = "2.3.1"
wasi = "0.7.0"
wasm-bindgen = "0.2.83"
vergen = "8.2.1"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.14.1+solana.1.17.28" }                          # tag is geyser plugin
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.14.1+solana.1.17.28" }                           # tag is geyser plugin
yellowstone-grpc-tools = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.14.1+solana.1.17.28", default-features = false } # tag is geyser plugin

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
codegen-units = 1
lto = true
