[package]
name = "account_state_filler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
tokio = { version = "1.25.0", features = ["full"] }
solana-snapshot-etl = { git = "https://github.com/austbot/solana-snapshot-etl", features=["parallel"] }
solana-runtime="1.14.13"
sqlx = { version = "0.6.2", features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "offline", "json"] }
sea-orm = { version = "0.10.6", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
tokio-postgres = "0.7.7"
digital_asset_types = { path = "../digital_asset_types", features = ["json_types", "sql_types"] }
figment = { version = "0.10.6", features = ["env"] }
indicatif = "0.17.3"
plerkle_serialization = "1.3.11"
flatbuffers = "22.10.26"
blockbuster = { version = "0.7.2" }

[patch.crates-io]
blockbuster = { git = "https://github.com/metaplex-foundation/blockbuster", branch="1.14" }
anchor-lang = { git="https://github.com/metaplex-foundation/anchor" }
mpl-token-metadata = { git="https://github.com/metaplex-foundation/metaplex-program-library", branch="update-deps"}
mpl-candy-machine-core = { git="https://github.com/metaplex-foundation/metaplex-program-library", branch="update-deps"}
mpl-bubblegum = { git="https://github.com/metaplex-foundation/metaplex-program-library", branch="update-deps"}
mpl-candy-guard = { git="https://github.com/metaplex-foundation/mpl-candy-guard", branch="update-deps"}
