[package]
name = "das-backfill"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
blockbuster = { workspace = true }
bs58 = { workspace = true }
das-core = { workspace = true }
solana-client = { workspace = true }
borsh = { workspace = true }
digital_asset_types = { workspace = true, features = [
  "json_types",
  "sql_types",
] }
anchor-client = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
solana-program = { workspace = true }
program_transformers = { workspace = true }
heck = { workspace = true }
mpl-bubblegum = { workspace = true }
num-traits = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-account-compression = { workspace = true, features = ["no-entrypoint"] }
spl-token = { workspace = true, features = ["no-entrypoint"] }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

[lints]
workspace = true
