[package]
authors = ["Metaplex Developers <dev@metaplex.com>"]
description = "Metaplex canonical program parsers, for indexing, analytics etc...."
edition = "2021"
license = "AGPL-3.0"
name = "blockbuster"
readme = "../README.md"
repository = "https://github.com/metaplex-foundation/blockbuster"
version = "2.3.0"

[dependencies]
anchor-lang = {workspace = true}
async-trait = {workspace = true}
borsh = {workspace = true}
bs58 = {workspace = true}
bytemuck = {workspace = true}
lazy_static = {workspace = true}
log = {workspace = true}
mpl-account-compression = {workspace = true, features = ["no-entrypoint"]}
mpl-bubblegum = {workspace = true}
mpl-core = {workspace = true, features = ["serde"]}
mpl-noop = {workspace = true, features = ["no-entrypoint"]}
mpl-token-metadata = {workspace = true, features = ["serde"]}
serde = {workspace = true}
solana-sdk = {workspace = true}
solana-transaction-status = {workspace = true}
solana-zk-token-sdk = {workspace = true}
spl-account-compression = {workspace = true, features = ["no-entrypoint"]}
spl-noop = {workspace = true, features = ["no-entrypoint"]}
spl-pod = {workspace = true, features = ["serde-traits"]}
spl-token = {workspace = true, features = ["no-entrypoint"]}
spl-token-2022 = {workspace = true, features = ["no-entrypoint"]}
spl-token-group-interface = {workspace = true}
spl-token-metadata-interface = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
flatbuffers = {workspace = true}
plerkle_serialization = {workspace = true}
rand = {workspace = true}
serde_json = {workspace = true}
solana-client = {workspace = true}
solana-geyser-plugin-interface = {workspace = true}
spl-concurrent-merkle-tree = {workspace = true}
