[package]
name = "das_api"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bs58 = { workspace = true }
cadence = { workspace = true }
cadence-macros = { workspace = true }
digital_asset_types = { workspace = true }
env_logger  = { workspace = true }
figment = { workspace = true, features = ["env"] }
hyper = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros"]}
log = { workspace = true }
open-rpc-derive = { workspace = true }
open-rpc-schema = { workspace = true }
schemars = { workspace = true }
schemars_derive = { workspace = true }
sea-orm = { workspace = true, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
sqlx = { workspace = true, features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "offline", "json"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }

[lints]
workspace = true
