[package]
name = "digital_asset_types"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
bs58 = { workspace = true }
indexmap = { workspace = true }
jsonpath_lib = { workspace = true }
log = { workspace = true }
mime_guess = { workspace = true }
mpl-token-metadata = { workspace = true, features = ["no-entrypoint", "serde-feature"] }
schemars = { workspace = true }
schemars_derive = { workspace = true }
sea-orm = { workspace = true, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "mock"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
spl-concurrent-merkle-tree = { workspace = true }
url = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }

[lints]
workspace = true
