[package]
name = "digital_asset_types"
version = "0.7.2"
edition = "2021"
publish = false


[dependencies]
spl-concurrent-merkle-tree = "0.2.0"
sea-orm = { optional = true, version = "0.10.6", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "mock"] }
sea-query = { version = "0.28.1", features = ["postgres-array"] }
serde = { version = "1.0.137", optional = true }
serde_json = { version = "1.0.81", optional = true, features=["preserve_order"] }
bs58 = "0.4.0"
borsh = { version = "~0.10.3", optional = true }
borsh-derive = { version = "~0.10.3", optional = true }
solana-sdk = "~1.16.16"
num-traits = "0.2.15"
num-derive = "0.3.3"
thiserror = "1.0.31"
blockbuster = "=0.9.0-beta.5"
jsonpath_lib = "0.3.0"
mime_guess = "2.0.4"
url = "2.3.1"
futures = "0.3.25"
reqwest = "0.11.13"
async-trait = "0.1.60"
tokio = { version = "1.22.0", features = ["full"] }
schemars = "0.8.6"
schemars_derive = "0.8.6"
log = "0.4.17"
indexmap = "1.9.3"

[dev-dependencies]
reqwest = "0.11.13"

[features]
default = ["json_types", "sql_types"]
json_types = ["serde", "serde_json"]
sql_types = ["sea-orm"]
