[package]
name = "digital_asset_types"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
async-trait = { workspace = true }
blockbuster = { workspace = true }
borsh = { workspace = true, optional = true  }
borsh-derive = { workspace = true, optional = true }
bs58 = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
jsonpath_lib = { workspace = true }
log = { workspace = true }
mime_guess = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
schemars = { workspace = true }
schemars_derive = { workspace = true }
sea-orm = { workspace = true, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "mock"], optional = true }
sea-query = { workspace = true, features = ["postgres-array"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, features = ["preserve_order"], optional = true }
solana-sdk = { workspace = true }
spl-concurrent-merkle-tree = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
url = { workspace = true }

[features]
default = ["json_types", "sql_types"]
json_types = ["serde", "serde_json"]
sql_types = ["sea-orm"]

[lints]
workspace = true
