[package]
edition = "2021"
name = "integration_tests"
publish = false
version = "0.1.0"

[dev-dependencies]
migration = {workspace = true}
das_api = {workspace = true}

anyhow = "1.0.71"
digital_asset_types = {workspace = true}
env_logger = "0.10.0"
figment = "0.10.8"
flatbuffers = "23.1.21"
function_name = "0.3.0"
futures-util = "0.3.27"
insta = {version = "1.34.0", features = ["json"]}
itertools = "0.10.1"
log = "0.4.17"
mpl-token-metadata = {version = "2.0.0-beta.1", features = ["no-entrypoint"]}
nft_ingester = {path = "../nft_ingester"}
once_cell = "1.19.0"
plerkle_messenger = {workspace = true, features = ["redis"]}
plerkle_serialization = {workspace = true}
sea-orm = {version = "0.10.6", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono",
  "mock",
]}
serde = "1.0.136"
serde_json = "1.0.64"
serial_test = "2.0.0"
solana-account-decoder = "1.16.15"
solana-client = "1.16.15"
solana-sdk = "1.16.15"
solana-transaction-status = "1.16.15"
spl-token = {version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"]}
sqlx = {version = "0.6.2", features = [
  "macros",
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "offline",
  "json",
]}
tokio = {version = "1.23.0", features = ["macros", "rt-multi-thread"]}
tokio-stream = {version = "0.1.14"}
[dependencies]
serial_test = "2.0.0"
