[package]
edition = "2021"
name = "integration_tests"
publish = false
version = "0.1.0"

[dev-dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
das_api = { workspace = true }
digital_asset_types = { workspace = true }
flatbuffers = { workspace = true }
function_name = { workspace = true }
futures = { workspace = true }
insta = { workspace = true, features = ["json"] }
itertools = { workspace = true }
log = { workspace = true }
migration = { workspace = true }
mpl-token-metadata = { workspace = true }
nft_ingester = { workspace = true }
once_cell = { workspace = true }
plerkle_serialization = { workspace = true }
program_transformers = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
mpl-bubblegum = { workspace = true }
spl-concurrent-merkle-tree = { workspace = true }
tempfile = { workspace = true }
async-channel = { workspace = true }
cadence = { workspace = true }
cadence-macros = { workspace = true }
bubblegum-batch-sdk = { workspace = true }