[package]
name = "load_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.9.18"
tokio = { version = "1.21.2", features = ["full"] }
solana-client = "1.9.18"
mpl-candy-machine = { version = "4.4.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.3.6", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = [
  "no-entrypoint",
] }
spl-token = "3.2.0"
solana-program = "1.9.18"
anchor-client = "0.24.2"
rand = "0.8.5"
fake = "2.5.0"
borsh = "0.9.3"
anchor-lang = "0.24.2"


