[package]
name = "load_generation_candy_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.1", features = ["full"] }
solana-client = "1.10.13"
mpl-candy-machine = { version = "4.5.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.4.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = [
  "no-entrypoint",
] }
anchor-client = "0.25.0"
spl-token = "3.3.0"
solana-program = "1.10.13"
rand = "0.8.5"
fake = "2.5.0"
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
solana-sdk = "1.10.13"
mpl-candy-machine-core = { version = "0.1.2", features = ["no-entrypoint"]}

[dev-dependencies]
borsh = "~0.9.2"
tarpc = "0.29.0"
console = "0.15.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "user-hooks"]
