[package]
name = "das-metadata-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[[bin]]
name = "das-metadata-json"

[dependencies]

backon = "0.4.1"
log = "0.4.17"
env_logger = "0.10.0"
anyhow = "1.0.75"
derive_more = "0.99.17"
redis = { version = "0.22.3", features = [
  "aio",
  "tokio-comp",
  "streams",
  "tokio-native-tls-comp",
] }
futures = { version = "0.3.25" }
indicatif = "0.17.5"
thiserror = "1.0.31"
serde_json = "1.0.81"
das-tree-backfiller = { path = "../tree_backfiller" }
tokio = { version = "1.26.0", features = ["full", "tracing"] }
sqlx = { version = "0.6.2", features = [
  "macros",
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "offline",
  "json",
] }
sea-orm = { version = "0.10.6", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono",
  "mock",
] }
sea-query = { version = "0.28.1", features = ["postgres-array"] }
chrono = "0.4.19"
cadence = "0.29.0"
cadence-macros = "0.29.0"
tokio-postgres = "0.7.7"
serde = "1.0.136"
bs58 = "0.4.0"
reqwest = "0.11.11"
plerkle_messenger = { version = "1.6.0", features = ['redis'] }
digital_asset_types = { path = "../digital_asset_types", features = [
  "json_types",
  "sql_types",
] }
figment = { version = "0.10.6", features = ["env", "toml", "yaml"] }
rand = "0.8.5"
url = "2.3.1"
tokio-stream = "0.1.12"
clap = { version = "4.2.2", features = ["derive", "cargo", "env"] }

[lints]
workspace = true
