[package]
name = "das-metadata-json"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[[bin]]
name = "das-metadata-json"

[dependencies]

anyhow = { workspace = true }
backon = "0.4.1"
bs58 = { workspace = true }
cadence = { workspace = true }
cadence-macros = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "env"] }
das-core = { workspace = true }
digital_asset_types = { workspace = true, features = [
  "json_types",
  "sql_types",
] }
derive_more = { version = "0.99.17" }
env_logger = { workspace = true }
figment = { workspace = true, features = ["env", "toml", "yaml"] }
futures = { workspace = true }
indicatif = "0.17.5"
log = { workspace = true }
plerkle_messenger = { workspace = true, features = ['redis'] }
rand = { workspace = true }
redis = { version = "0.25.2", features = [
  "aio",
  "tokio-comp",
  "streams",
  "tokio-native-tls-comp",
] }
reqwest = { workspace = true }
sea-orm = { workspace = true, features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono",
  "mock",
] }
sea-query = { workspace = true, features = ["postgres-array"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
  "macros",
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "offline",
  "json",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-stream = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
