[package]
name = "metaplex-rpc-proxy"
version = "0.6.8"
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
proxy-wasm = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
