[package]
name = "migration"
version = "0.7.2"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1", ] }
digital_asset_types = { path = "../digital_asset_types", features = ["json_types", "sql_types"] }
enum-iterator = "1.2.0"
enum-iterator-derive = "1.1.0"

[dependencies.sea-orm-migration]
version = "0.10.6"
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
]

[lints]
workspace = true
