[package]
name = "migration"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
async-std = { workspace = true, features = ["attributes", "tokio1"] }
digital_asset_types = { workspace = true }
enum-iterator = { workspace = true }
sea-orm-migration = { workspace = true, features = ["runtime-tokio-rustls", "sqlx-postgres"] }

[lints]
workspace = true
