[package]
name = "migration"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }

[dependencies]
async-std = { workspace = true, features = ["attributes", "tokio1"] }
enum-iterator = { workspace = true }
enum-iterator-derive = { workspace = true }
sea-orm-migration = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }

[lints]
workspace = true
